--- a/events.html
+++ b/events.html
@@ -53,8 +53,8 @@
                         />
                     </a>
                     <div class="header__right-group">
-                        <div class="header__search_option">
-                            <span class="hide-on-tablet">Search</span>
+                        <div class="header__search_btn">
+                            <span class="hide-on-desktop">Search</span>
                             <i class="fa fa-search"></i>
                         </div>
                         <div class="header__hamburger-menu">
@@ -619,7 +619,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -638,7 +638,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1007,7 +1007,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1026,7 +1026,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1395,7 +1395,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1414,7 +1414,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1783,7 +1783,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1802,7 +1802,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -2073,12 +2073,12 @@
                             </div>
                         <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 
-                        <div class="carousel-next-btn hide-on-tablet hide-on-mobile">
+                        <div class="carousel-next-btn hide-on-desktop hide-on-mobile">
                             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="24" viewBox="0 0 13 24" fill="none">
                                 <path d="M1.14583 22.9697L12.1664 11.9492L1.14583 0.928625" stroke="#B0B0B0" stroke-width="1.46469" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                         </div>
-                        <div class="carousel-prev-btn hide-on-tablet hide-on-mobile">
+                        <div class="carousel-prev-btn hide-on-desktop hide-on-mobile">
                             <svg width="13" height="24" viewBox="0 0 13 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.1843 0.92865L1.1637 11.9492L12.1843 22.9698" stroke="#B0B0B0" stroke-width="1.46469" stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
