--- a/topics.html
+++ b/topics.html
@@ -53,8 +53,8 @@
                         />
                     </a>
                     <div class="header__right-group">
-                        <div class="header__search_option">
-                            <span class="hide-on-tablet">Search</span>
+                        <div class="header__search_btn">
+                            <span class="hide-on-desktop">Search</span>
                             <i class="fa fa-search"></i>
                         </div>
                         <div class="header__hamburger-menu">
@@ -818,7 +818,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -837,7 +837,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1170,7 +1170,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1189,7 +1189,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1588,7 +1588,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1607,7 +1607,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
@@ -1973,7 +1973,7 @@
                                     </div>
             
                                     <div
-                                        class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                                        class="carousel-next-btn hide-on-desktop hide-on-mobile"
                                     >
                                         <svg
                                             xmlns="http://www.w3.org/2000/svg"
@@ -1992,7 +1992,7 @@
                                         </svg>
                                     </div>
                                     <div
-                                        class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                                        class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                                     >
                                         <svg
                                             width="13"
