--- a/book-details-download.html
+++ b/book-details-download.html
@@ -53,8 +53,8 @@
                         />
                     </a>
                     <div class="header__right-group">
-                        <div class="header__search_option">
-                            <span class="hide-on-tablet">Search</span>
+                        <div class="header__search_btn">
+                            <span class="hide-on-desktop">Search</span>
                             <i class="fa fa-search"></i>
                         </div>
                         <div class="header__hamburger-menu">
@@ -693,7 +693,7 @@
                         </div>
 
                         <div
-                            class="carousel-next-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-next-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -712,7 +712,7 @@
                             </svg>
                         </div>
                         <div
-                            class="carousel-prev-btn hide-on-tablet hide-on-mobile"
+                            class="carousel-prev-btn hide-on-desktop hide-on-mobile"
                         >
                             <svg
                                 width="13"
