--- a/books.html
+++ b/books.html
@@ -53,8 +53,8 @@
                         />
                     </a>
                     <div class="header__right-group">
-                        <div class="header__search_option">
-                            <span class="hide-on-tablet">Search</span>
+                        <div class="header__search_btn">
+                            <span class="hide-on-desktop">Search</span>
                             <i class="fa fa-search"></i>
                         </div>
                         <div class="header__hamburger-menu">
