--- a/events-details-video.html
+++ b/events-details-video.html
@@ -374,19 +374,25 @@
                 <div class="container block-inner-container">
                     <div class="article-hero">
                         <div class="article-hero__header">
-                            <div class="meta">Expert Comment</div>
+                            <div class="meta">Event</div>
                             <div class="article-hero__header__title">
                                 Al Nahda Thought Center Website
                             </div>
                         </div>
                         <div class="article-hero__media img img-6_9">
-                            <img
-                                src="assets/img/image00006.jpeg"
-                                alt="article-image"
-                            />
+                            <iframe
+                                width="560"
+                                height="315"
+                                src="https://www.youtube.com/embed/BHACKCNDMW8?si=ExkCTFWpr4d1YMYL"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen
+                                class="events-video-iframe"
+                            ></iframe>
                         </div>
                         <div class="article-hero__metadata">
-                            <div class="meta">author name</div>
+                            <div class="meta d-flex align-items-center gap-4"><p>Jordan</p> <p>2:30 - 6:30</p></div>
                             <div class="date">28/8/2023</div>
                         </div>
                     </div>
